model training done

--- a/research/02_data_validation.ipynb
+++ b/research/02_data_validation.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "63db1219",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
     "\n",
     "    def get_data_validation_config(self) -> DataValidationConfig:\n",
     "        config = self.config.data_validation     # Accessing data_validation section from config.yaml\n",
-    "        schema = self.schema.COLUMNS\n",
+    "        schema = self.schema.COLUMNS             # COLUMN is from schema.yaml\n",
     "\n",
     "        create_directories([Path(config.root_dir)])\n",
     "\n",
