--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a7bcd0e7",
    "metadata": {},
    "outputs": [
@@ -295,14 +295,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-12-13 12:55:13,271: INFO: common: YAML file: config\\config.yaml loaded successfully]\n",
-      "[2025-12-13 12:55:13,275: INFO: common: YAML file: params.yaml loaded successfully]\n",
-      "[2025-12-13 12:55:13,280: INFO: common: YAML file: schema.yaml loaded successfully]\n",
-      "[2025-12-13 12:55:13,282: INFO: common: created directory at: artifacts]\n",
-      "[2025-12-13 12:55:13,284: INFO: common: created directory at: artifacts\\data_trasformation]\n",
-      "[2025-12-13 12:55:13,367: INFO: 2492608482: Splited dat into training and test sets]\n",
-      "[2025-12-13 12:55:13,368: INFO: 2492608482: (1199, 12)]\n",
-      "[2025-12-13 12:55:13,369: INFO: 2492608482: (400, 12)]\n",
+      "[2025-12-13 12:57:03,949: INFO: common: YAML file: config\\config.yaml loaded successfully]\n",
+      "[2025-12-13 12:57:03,953: INFO: common: YAML file: params.yaml loaded successfully]\n",
+      "[2025-12-13 12:57:03,958: INFO: common: YAML file: schema.yaml loaded successfully]\n",
+      "[2025-12-13 12:57:03,962: INFO: common: created directory at: artifacts]\n",
+      "[2025-12-13 12:57:03,965: INFO: common: created directory at: artifacts\\data_trasformation]\n",
+      "[2025-12-13 12:57:04,008: INFO: 2492608482: Splited dat into training and test sets]\n",
+      "[2025-12-13 12:57:04,010: INFO: 2492608482: (1199, 12)]\n",
+      "[2025-12-13 12:57:04,013: INFO: 2492608482: (400, 12)]\n",
       "(1199, 12)\n",
       "(400, 12)\n"
      ]
@@ -311,9 +311,9 @@
    "source": [
     "try:\n",
     "    config=ConfigurationManager()\n",
-    "    data_validation_config=config.get_data_transformation_config()\n",
-    "    data_validation=Datatransformation(config=data_validation_config)\n",
-    "    data_validation.train_test_splitting()\n",
+    "    data_transformation_config=config.get_data_transformation_config()\n",
+    "    data_transformation=Datatransformation(config=data_transformation_config)\n",
+    "    data_transformation.train_test_splitting()\n",
     "except Exception as e:\n",
     "    raise e"
    ]
