--- a/research/research.ipynb
+++ b/research/research.ipynb
@@ -115,6 +115,129 @@
     "result = product(2, \"3\")\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c9ff94e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d:\\\\mlops\\\\datascienceproject\\\\research'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d60f4533",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d:\\\\mlops\\\\datascienceproject'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.chdir(\"d:/mlops/datascienceproject/\")\n",
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7bba1b61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Column Validation Status: True\\n', 'Datatype Validation Status: True\\n']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "with open(Path(\"artifacts/data_validation/status.txt\"),'r')as f:\n",
+    "    status = f.readlines()\n",
+    "status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "daa381cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "Data Validation Failed: Datatype Validation Status = False",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mException\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 34\u001b[39m\n\u001b[32m     31\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mData Validation Failed: Column Validation Status = False\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     33\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m datatype_status:\n\u001b[32m---> \u001b[39m\u001b[32m34\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mData Validation Failed: Datatype Validation Status = False\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mException\u001b[39m: Data Validation Failed: Datatype Validation Status = False"
+     ]
+    }
+   ],
+   "source": [
+    "status_file = Path(\"artifacts/data_validation/status.txt\")\n",
+    "\n",
+    "with open(status_file, \"r\") as f:\n",
+    "    lines = f.readlines()\n",
+    "\n",
+    "column_status = None\n",
+    "datatype_status = None\n",
+    "\n",
+    "# 2️⃣ Parse validation statuses\n",
+    "for line in lines:\n",
+    "    if \"Column Validation Status\" in line:\n",
+    "        column_status = line.split(\":\")[-1].strip() == \"True\"\n",
+    "    elif \"Datatype Validation Status\" in line:\n",
+    "        datatype_status = line.split(\":\")[-1].strip() == \"True\"\n",
+    "\n",
+    "# 3️⃣ Validate presence of both statuses\n",
+    "if column_status is None or datatype_status is None:\n",
+    "    raise Exception(\n",
+    "        \"Validation status file is malformed or missing required entries.\"\n",
+    "    )\n",
+    "\n",
+    "# 4️⃣ Raise specific errors if validation fails\n",
+    "if not column_status and not datatype_status:\n",
+    "    raise Exception(\n",
+    "        \"Data Validation Failed: \"\n",
+    "        \"Column Validation Status = False, \"\n",
+    "        \"Datatype Validation Status = False\"\n",
+    "    )\n",
+    "\n",
+    "if not column_status:\n",
+    "    raise Exception(\"Data Validation Failed: Column Validation Status = False\")\n",
+    "\n",
+    "if not datatype_status:\n",
+    "    raise Exception(\"Data Validation Failed: Datatype Validation Status = False\")\n"
+   ]
   }
  ],
  "metadata": {
